<resources>
    <string name="app_name">FunApp</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not Yet Signed Up??</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="signedin_as">SignedIn As:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="have_some_fun">HaVe soMe FuN</string>
    <string name="displaysnackbar">Tap on joke to add widget</string>
    <string name="nointernetconn">No Internet connection</string>
    <string name="ok">okay</string>
    <string name="valuestring">value</string>
    <string name="jokestring">joke</string>
    <string name="wdigetadd">Added to widgets</string>
    <string name="alreadysignedin">already Signed in</string>
    <string name="enteremail">Enter email address!</string>
    <string name="enterpassword">Enter password!</string>
    <string name="datanotvalid">Data Not valid</string>
    <string name="signedout">Signed Out</string>
    <string name="passtooshort">Password too short, enter minimum 6 characters!</string>
    <string name="regsuccesfully">Registered Succesfully</string>
    <string name="enterregemail">Enter your registered email id</string>
    <string name="sentinstructions">We have sent you instructions to reset your password!</string>
    <string name="failtosendpassword">Failed to send reset email!</string>
    <string name="emailupdated">Email address is updated. Please sign in with new email id!</string>
    <string name="failtoupdateemail">Failed to update email!</string>
    <string name="passupdated">Password is updated, sign in with new password!</string>
    <string name="passupdtaefail">Failed to update password!</string>
    <string name="profiledeleted">Your profile is deleted:( Create a account now!</string>
    <string name="failedtodelete">Failed to delete your account!</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="resetpasswordsent">Reset password email is sent!</string>
    <string name="failtosentresetemail">Failed to send reset email!</string>
    <string name="enter_no_of_jokes">Enter No of jokes</string>
    <string name="get">get</string>
    <string name="jokes">jokes</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="addid">ca-app-pub-3940256099942544~3347511713</string>
    <string name="appimage">Appimage</string>
    <string name="addunitid">ca-app-pub-3940256099942544/1033173712</string>
    <string name="save_for_offline">Save</string>
    <string name="view_saved">View Saved</string>
    <string name="nosaveddata">No saved Data</string>
    <string name="jokespath">jokes</string>
    <string name="saved">saved</string>


</resources>
