<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layoutmargintop"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/imglayoutbuttom"
                android:src="@drawable/lol"
                android:contentDescription="@string/appimage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/lbl_forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textmargintop"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/forgot_password_msg"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textviewtextsize" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/resetpasswordemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/butmargintop"
                android:background="@color/colorAccent"
                android:text="@string/btn_reset_password"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/backbuttonmargintop"
                android:background="@null"
                android:text="@string/btn_back"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/pbarwidth"
            android:layout_height="@dimen/pbarheight"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/pbarmarginbottom"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

</LinearLayout>